--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-:root {
+/* :root {
   
-}
+} */
 
 .logo{
   height: 70px;
@@ -91,18 +91,18 @@ code {
 
 .jpeg{
   background-image: linear-gradient(70deg, white, rgb(121, 184, 4)),
-      url('./assets/images/box.png');
+  url('./assets/img/img/box.png');
     background-blend-mode: multiply;
 }
 .jpeg2{
   background-image: linear-gradient(70deg,#072466,#072466),
-      url('./assets/images/box.png');
+      url('./assets/img/img/box.png');
     background-blend-mode: lighten;
     background-repeat: no-repeat;
 }
 .jpeg3{
   background-image: linear-gradient(70deg,#FFC86C,#FFC86C),
-      url('./assets/images/box.png');
+  url('./assets/img/img/box.png');
     background-blend-mode: saturation;
     background-repeat: no-repeat;
 }
